--- a/src/template/main.html
+++ b/src/template/main.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <title></title>
+    <link rel="stylesheet" href="bower_components/pure/pure-min.css">
+    <link rel="stylesheet" href="bower_components/pure/grids-responsive-min.css">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
 </head>
 <body>
 
