--- a/resources/public/site.css
+++ b/resources/public/site.css
@@ -1,10 +1,147 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title</title>
-</head>
-<body>
+body {
+    border-top: 2px solid #DA753F;
+}
 
-</body>
-</html>
+html, button, input, select, textarea,
+.pure-g [class *= "pure-u"] {
+    font-family: "Quando", Libre, Georgia, Times, serif;
+    color: #333333;
+}
+
+.l-box {
+    padding-right: 3em;
+}
+
+.pure-g > div {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.content-wrapper {
+    max-width: 670px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
+
+#header {
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+#header h1 {
+    font-size: 30pt;
+    font-family: 'Amatic SC', "Georgia", serif;
+    display: inline-block;
+    padding-bottom: 10px;
+    margin: 0px 15px 0px 0px;
+    color: #DA753F;
+}
+
+#header a {
+    text-decoration: none;
+}
+
+#header .header-line {
+    border-bottom: 1px solid #e3e3e3;
+    margin-bottom: 60px;
+    margin-bottom: 00px;
+    width: 33%;
+}
+
+#header p {
+    font-family: 'Amatic SC', "Georgia", serif;
+    font-size: 23pt;
+    display: inline;
+    vertical-align: baseline;
+    color: #DA753F;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto \9; /* ie8 */
+}
+
+.post a {
+    text-decoration: underline;
+    color: #DA753F;
+}
+
+.post a:hover {
+    text-decoration: underline;
+    color: #777;
+}
+
+.post {
+    margin-bottom: 30px;
+}
+
+.post h2 {
+    text-decoration: none;
+    font-size: 29pt;
+    color: #333;
+    margin-bottom: 8px;
+    font-weight: 700;
+    line-height: 1;
+}
+
+.post h2 a {
+    text-decoration: none;
+    color: #333;
+}
+
+.post .info {
+    font-size: 11pt;
+    color: rgba(0, 0, 0, 0.44);
+    margin-bottom: 40px;
+}
+
+.post p {
+    line-height: 25pt;
+    color: #333;
+}
+
+hr {
+    margin-bottom: 20px;
+    height: 1px;
+    border: 0;
+    background-color: #ccc;
+    margin-top: 25px;
+}
+
+.posts-list h2 {
+    margin-top: 70px;
+}
+
+a {
+    color: #DA753F;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.fb-like {
+    margin-left: 10px;
+}
+
+.social-share {
+    font-size: 1px;
+    margin-top: 15px;
+}
+
+#disqus_thread {
+    margin-top: 20px;
+}
+
+#footer {
+    margin-top: 100px;
+    margin-bottom: 9px;
+    text-align: center;
+    font-size: 10pt;
+    color: #b3b3b1;
+}
+
