--- a/resources/public/site.css
+++ b/resources/public/site.css
@@ -1,6 +1,7 @@
 html {
 
 }
+
 body {
     border-top: 2px solid #DA753F;
 }
@@ -22,7 +23,7 @@ html, button, input, select, textarea,
 
 .content-wrapper {
     max-width: 670px;
-    margin-left: 10%;
+    margin-left: 12%;
     margin-right: auto;
     padding: 10px;
 }
@@ -46,7 +47,7 @@ a:hover {
     font-family: 'Amatic SC', "Georgia", serif;
     display: inline-block;
     padding-bottom: 10px;
-    margin: 0px 15px 0px 0px;
+    margin: 0 15px 0 0;
     color: #DA753F;
 }
 
@@ -56,7 +57,6 @@ a:hover {
 
 #header .header-line {
     border-bottom: 1px solid #e3e3e3;
-    margin-bottom: 60px;
     margin-bottom: 00px;
     width: 33%;
 }
@@ -67,6 +67,21 @@ a:hover {
     display: inline;
     vertical-align: baseline;
     color: #DA753F;
+}
+
+@media screen and (max-width: 768px) {
+    .content-wrapper {
+        margin-left: 0;
+    }
+
+    #header h1 {
+        padding-bottom: 0;
+    }
+
+    #header p {
+        margin: 0 0 10px;
+        display: block;
+    }
 }
 
 img {
@@ -92,21 +107,32 @@ img {
 .post h2 {
     text-decoration: none;
     font-size: 29pt;
-    color: #777;
+    color: #291924;
     margin-bottom: 8px;
     font-weight: 700;
-    line-height: 1;
+    line-height: 48px;
+
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
 }
 
 .post h2 a {
     text-decoration: none;
-    color: #777;
+    color: #291924;
+
+    /*
+    background-color: #DA753F;
+    color: white;
+    text-decoration: none;
+    */
 }
 
 .post h2 a:hover {
-    color: #777;
+    background-color: #DA753F;
+    color: white;
+    text-decoration: none;
 }
-
 
 .post .info {
     font-size: 11pt;
@@ -116,7 +142,6 @@ img {
 
 .post p {
     line-height: 25pt;
-    color: #838383;
     color: #3a3b39;
 }
 
