--- a/resources/public/site.css
+++ b/resources/public/site.css
@@ -58,7 +58,7 @@ a:hover {
 
 #header .header-line {
     border-bottom: 1px solid #e3e3e3;
-    margin-bottom: 00px;
+    margin-bottom: 10px;
     width: 33%;
 }
 
@@ -68,6 +68,27 @@ a:hover {
     display: inline;
     vertical-align: baseline;
     color: #DA753F;
+}
+
+#header ul {
+    list-style-type: none;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+#header li a {
+    margin-right: 20px;
+    float: left;
+    display: block;
+    padding: 5px;
+}
+
+#header li a:hover {
+    background-color: #DA753F;
+    color: white;
+    text-decoration: none;
+    padding: 5px;
 }
 
 @media screen and (max-width: 768px) {
