--- a/resources/public/site.css
+++ b/resources/public/site.css
@@ -8,7 +8,7 @@ body {
 
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
-    font-family:  "Quando", Libre, Georgia, serif;
+    font-family: "Quando", Libre, Georgia, serif;
 }
 
 .l-box {
@@ -23,7 +23,6 @@ html, button, input, select, textarea,
 
 .content-wrapper {
     max-width: 680px;
-    margin-left: 12%;
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
@@ -189,8 +188,16 @@ hr {
 }
 
 img.instagram {
-    padding: 2px;
-    width: 220px;
+    padding-left: 4px;
+    margin: 0;
+    max-width: 30%;
+}
+
+@media screen and (max-width: 500px) {
+    img.instagram {
+        padding: 2px;
+        max-width: 45%;
+    }
 }
 
 #disqus_thread {
